--- a/lab-02/templates/index.html
+++ b/lab-02/templates/index.html
@@ -60,6 +60,8 @@
             font-size: 1.1em;
             transition: background-color 0.3s ease;
             display: inline-block;
+            width: 80%;
+            box-sizing: border-box;
         }
 
         nav ul li a:hover {
@@ -87,11 +89,12 @@
             <ul>
                 <li><a href="{{ url_for('caesar_page') }}">Mã Hóa/Giải Mã Caesar</a></li>
                 <li><a href="{{ url_for('vigenere_page') }}">Mã Hóa/Giải Mã Vigenère</a></li>
+                <li><a href="{{ url_for('railfence_page') }}">Mã Hóa/Giải Mã Rail Fence</a></li> {# DÒNG MỚI #}
             </ul>
         </nav>
     </div>
     <footer>
-        <p>&copy; 2024 - Công cụ mã hóa đơn giản</p>
+        <p>&copy; 2024-2025 - Công cụ mã hóa đơn giản</p>
     </footer>
 </body>
 
